Fixed Controller for TogglePasswordVisibility
Modified a few CSS codes for aesthetics
Temporarily removed unnecessary parts(comment out)

--- a/Module Settings/Styles/_Mixin Setting Page.scss
+++ b/Module Settings/Styles/_Mixin Setting Page.scss
@@ -7,9 +7,8 @@
 	--normBtnBorderColor: var(--text-color-4); /*white*/;
 	--normBtnRadius: 6px;
 	--normBtnFWeight: 500px;
-	--normBtnBgColor: #2058B2;
-	--normBtnHovActFColor: red;
-	--normBtnHovActBgColor: white;
+	--normBtnBgColor: #639FFF;
+	--normBtnHovActBgColor: #639FFF;
 
 	--customInputColor: var(--text-color-4); /*white*/
 	--customInputFSize: 10px;
@@ -168,16 +167,17 @@
 }
 
 @mixin imgWrapper_id{
-	width:60%;
-	height:80%;
-	border:2px solid var(--border-color-7);
-	border-radius:6px;
+	max-width:400px;
+	max-height:400px;
+	margin-bottom:0px;
 }
 
 @mixin profilePic-id{
 	width:100%;
-	height:100%;
-	object-fit:cover;
+	max-height:250px;
+    object-fit: contain;
+    border-radius: 10px;
+    border:1px solid white;
 }
 
 @mixin nameAndTitle-Wrap{
@@ -255,13 +255,30 @@
 
 @mixin normButton_RoClass{
 	margin-top:10px;
+	border: none;
+	padding: 7px 15px;
+	border-radius: 3px;
+	display: block;
+	background-color: #2176FF;
+	color: #FFFFFF;
+	cursor: pointer;
+}
+
+@mixin normButton_RoClass-hover{
+	opacity: .7;
+}
+
+@mixin normButton_RoClass-active{
+	opacity: .5;
 }
 
 @mixin changeCredentialsWrap_class{
 	display:flex;
 	flex-direction:column;
 	padding:10px;
-	box-shadow: 0 2px 4px 0 #ffffff, 0 4px 12px 0 #a9a9a9;
+	border-radius:6px;
+	margin-bottom:20px;
+	box-shadow: 0px 0px 4px rgba(#096B6C, .7);
 }
 
 @mixin inputBoxesWrap_class{
@@ -289,7 +306,7 @@
 	height:auto;
 	border:1px solid var(--border-color-7);
 	border-radius:6px;
-	box-shadow: 0 2px 4px 0 #ffffff, 0 4px 12px 0 #a9a9a9;
+	box-shadow: 0px 0px 4px rgba(#096B6C, .7);
 	padding:auto;
 }
 
@@ -308,24 +325,29 @@
 	align-items: center;
 	font-size:20px;
 	margin-bottom:5px;
+	padding-top:10px;
 }
 
 @mixin preferencesOptions_Class{
 	margin:auto;
-	width:40%;
+	width:80%;
 	padding:10px;
 	border:1px solid var(--bg-color-11);
-	box-shadow: 0 2px 4px 0 #ffffff, 0 4px 12px 0 #a9a9a9;
+	box-shadow: 0px 0px 4px rgba(#096B6C, .7);
 	border-radius:6px;
 	justify-content: space-around;
 }
 
 @mixin radioChoicesTitle{
-	color:var(--text-color-5);
+	text-align:center;
+	color: var(--text-color-1);
+    background-color: var(--bg-color-2);
 }
 
 @mixin notificationTitle_class{
-	color:var(--text-color-5);
+	text-align:center;
+	color: var(--text-color-1);
+    background-color: var(--bg-color-2);
 }
 
 /*************************************************************************************/
@@ -371,7 +393,7 @@
 	align-items: center;
 	border:1px solid var(--border-color-7);
 	border-radius:6px;
-	box-shadow: 0 2px 4px 0 #ffffff, 0 4px 12px 0 #a9a9a9;
+	box-shadow: 0px 0px 4px rgba(#096B6C, .7);
 
 }
 
@@ -380,4 +402,16 @@
 	width:200px;
 	display:flex;
 	flex-direction:row;
+}
+
+@mixin mobile_imgWrapper_id{
+	max-width:120px;
+	max-height:120px;
+}
+
+@mixin mobile_profilePic-id{
+	width:100%;
+	height:120px;
+    object-fit: contain;
+    border-radius: 10px;
 }
